--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,10 +14,10 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Add execute permissions to script
-      run: chmod +x ./deploy_to_griefbox.sh
+      run: chmod +x ./.github/workflows/deploy_to_griefbox.sh
 
     - name: Run the script with secrets
-      run: bash ./deploy_to_griefbox.sh
+      run: bash ./.github/workflows/deploy_to_griefbox.sh
       env:
         SSH_USERNAME: ${{ secrets.GRIEFBOX_SSH_USERNAME }}
         SSH_HOST: ${{ secrets.GRIEFBOX_SSH_HOST }}
