fix: bugs in deployment script
fix: yet another minor bug

fix: add -tt flag to force ssh connection inside script

fix: add known_hosts

empty

fix: idk anymore

fix: try RSA

fix: try enabling sha-1

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,4 +21,5 @@ jobs:
       env:
         SSH_USERNAME: ${{ secrets.GRIEFBOX_SSH_USERNAME }}
         SSH_HOST: ${{ secrets.GRIEFBOX_SSH_HOST }}
-        SSH_KEY: ${{ secrets.GRIEFBOX_SSH_KEY_ECDSA }}
+        SSH_KEY: ${{ secrets.GRIEFBOX_SSH_KEY_RSA }}
+        KNOWN_HOSTS: ${{ secrets.GRIEFBOX_KNOWN_HOSTS_KEYS }}
